--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
+    "chai": "^1.10.0",
     "express": "^4.10.4",
-    "socket.io": "^1.2.1"
+    "mocha": "^2.0.1",
+    "socket.io": "^1.2.1",
+    "underscore": "^1.7.0"
   }
 }
